fix data methodology overflow?

--- a/src/main/webapp/app/data-methodology/data-methodology.component.scss
+++ b/src/main/webapp/app/data-methodology/data-methodology.component.scss
@@ -51,7 +51,7 @@ code {
 p {
   font-family: 'neue-plak', sans-serif;
   color: #ffffff;
-  font-size: 0.9vw;
+  font-size: 0.85vw;
   text-align: left;
 }
 
